deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrated-dashboard
  labels:
    app: integrated-dashboard
  namespace: team2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: integrated-dashboard
  template:
    metadata:
      labels:
        app: integrated-dashboard
    spec:
      containers:
      - name: dashboard
        image: 172.16.6.61:5000/library/integrated-dashboard:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: integrated-dashboard-service
  namespace: team2
spec:
  selector:
    app: integrated-dashboard
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
