ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integrated-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: integrated-dashboard-service
            port:
              number: 3000
